First finished version of discord integration